Adapt Student API to use DTOs in requests and responses, update tests accordingly