@@ -1,12 +1,14 @@
 package com.example.schoolplatform.controller;
 
-import com.example.schoolplatform.entity.Student;
+import com.example.schoolplatform.dto.StudentDTO;
 import com.example.schoolplatform.service.StudentService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import java.util.Arrays;
@@ -30,18 +32,18 @@ public class StudentControllerTest {
 
     @Test
     void testGetAllStudents() throws Exception {
-        Student student = new Student("John Doe", "john@example.com");
-        List<Student> students = Arrays.asList(student);
-        when(studentService.findAll()).thenReturn(students);
+        StudentDTO studentDTO = new StudentDTO(1L, "John Doe", "john@example.com", List.of());
+        Page<StudentDTO> studentPage = new PageImpl<>(Arrays.asList(studentDTO));
+        when(studentService.findAll(0, 3, "id", "asc")).thenReturn(studentPage);
         mockMvc.perform(get("/api/students"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].name").value("John Doe"));
+                .andExpect(jsonPath("$.content[0].name").value("John Doe"));
     }
 
     @Test
     void testGetStudentById() throws Exception {
-        Student student = new Student("John Doe", "john@example.com");
-        when(studentService.findById(1L)).thenReturn(student);
+        StudentDTO studentDTO = new StudentDTO(1L, "John Doe", "john@example.com", List.of());
+        when(studentService.findById(1L)).thenReturn(studentDTO);
         mockMvc.perform(get("/api/students/1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.name").value("John Doe"));
@@ -49,22 +51,22 @@ public class StudentControllerTest {
 
     @Test
     void testCreateStudent() throws Exception {
-        Student student = new Student("John Doe", "john@example.com");
-        when(studentService.save(any(Student.class))).thenReturn(student);
+        StudentDTO studentDTO = new StudentDTO(null, "John Doe", "john@example.com", List.of());
+        when(studentService.save(any(StudentDTO.class))).thenReturn(studentDTO);
         mockMvc.perform(post("/api/students")
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(student)))
+                .content(objectMapper.writeValueAsString(studentDTO)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.name").value("John Doe"));
     }
 
     @Test
     void testUpdateStudent() throws Exception {
-        Student student = new Student("Jane Doe", "jane@example.com");
-        when(studentService.update(1L, any(Student.class))).thenReturn(student);
+        StudentDTO studentDTO = new StudentDTO(null, "Jane Doe", "jane@example.com", List.of());
+        when(studentService.update(1L, any(StudentDTO.class))).thenReturn(studentDTO);
         mockMvc.perform(put("/api/students/1")
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(student)))
+                .content(objectMapper.writeValueAsString(studentDTO)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.name").value("Jane Doe"));
     }
